--- a/estilos.css
+++ b/estilos.css
@@ -1,4 +1,5 @@
 body{
 background:rgba(253, 153, 2, 0.78) url(paolotroll.jpg) no-repeat center;
-background-size:100%
+background-size:100%;
+color:white;
 }
