--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,7 @@
 body{
 background:rgba(253, 153, 2, 0.78) url(kratos.jpg) no-repeat center;
 background-size:100%;
-color:white;
+  color:white;}
 #menuPrincipal{
   width:100%;
   height:100px;
