--- a/estilos.css
+++ b/estilos.css
@@ -4,8 +4,8 @@ background-size:100%;
   color:white;}
 #menuPrincipal{
   width:100%;
-  height:100px;
-  background:red;
+  height:20px;
+  background:white;
 }
      
  
