--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,9 @@
 body{
 background:rgba(253, 153, 2, 0.78) url(kratos.jpg) no-repeat center;
 background-size:100%;
-  color:white;}
+  color:white;
+}
+
 #menuPrincipal{
   width:100%;
   height:20px;
@@ -9,5 +11,10 @@ background-size:100%;
   padding:10px;
 }
      
- 
+ #menuPrincipal a{
+  color:orange;
+   font-size:16px;
+   text-decoration:none;
+   display:inline-block;
+}
 
