--- a/estilos.css
+++ b/estilos.css
@@ -19,3 +19,19 @@ background-size:100%;
    padding-right:20px;
 }
 
+#banner{
+width:100%;
+height:100%;
+  background:black url(portada.jpg) no-repeat center center;
+  background-size:100%;
+  padding-top:10%;
+  padding-left:100px;
+  padding-right:100px;
+  padding-bottom:100px;
+}
+
+#banner h1{
+font-size:30px;
+color:white;  
+}
+
