--- a/estilos.css
+++ b/estilos.css
@@ -22,7 +22,7 @@ background-size:100%;
 #banner{
 width:100%;
 height:100%;
-  background:black url(poder.jpg) no-repeat center center;
+  background:black url(hola.jpeg) no-repeat center center;
   background-size:100%;
   padding-top:10%;
   padding-left:100px;
